<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="back">Back</string>
    <string name="themes">Themes</string>
    <string name="apptheme">AppTheme</string>
    <string name="overlaythemelime">Lime</string>
    <string name="overlaythemered">Red</string>
    <string name="overlaythemegreen">Green</string>
    <string name="overlaythemeblue">Blue</string>
    <string name="languages">Languages</string>
    <string name="russian">Русский</string>
    <string name="userimage">UserImage</string>
    <string name="english">English</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="message">Message</string>
    <string name="callUser">Call</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="organization">Organization:</string>
    <string name="phone">Phone:</string>
    <string name="surname">Surname:</string>
    <string name="sendSMS">Send SMS</string>
    <string name="EnterName">Enter name</string>
    <string name="EnterPhone">Enter phone</string>
</resources>
