<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activitis.AddNewContactActivity">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  tools:ignore="MissingConstraints">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent">
            <TextView android:text="@string/name"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/textView2"/>
            <EditText android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:inputType="textPersonName"
                      android:id="@+id/name"
                      android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
                      android:layout_toEndOf="@+id/textView2" android:layout_marginStart="0dp"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent">
            <TextView android:text="@string/surname"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/textView3"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:ems="10"
                      android:id="@+id/surname"
                      android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
                      android:layout_toEndOf="@+id/textView3" android:layout_marginStart="0dp"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent">
            <TextView android:text="@string/phone"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/textView4"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="phone"
                      android:ems="10"
                      android:id="@+id/phone"
                      android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
                      android:layout_toEndOf="@+id/textView4" android:layout_marginStart="0dp"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent">
            <TextView android:text="@string/organization"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/textView5"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPersonName"
                      android:ems="10"
                      android:id="@+id/organization"
                      android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
                      android:layout_toEndOf="@+id/textView5" android:layout_marginStart="0dp"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent">
            <TextView android:text="@string/email"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/textView6"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:ems="10"
                      android:id="@+id/email"
                      android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
                      android:layout_toEndOf="@+id/textView6" android:layout_marginStart="0dp"/>
        </RelativeLayout>
        <GridLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/createContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:onClick="addNewUser"/>
        </GridLayout>
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>