<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ContactInfoActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"
                tools:layout_editor_absoluteY="16dp"
                tools:layout_editor_absoluteX="14dp"
                tools:ignore="MissingConstraints"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/surname"
                tools:layout_editor_absoluteY="16dp"
                tools:layout_editor_absoluteX="14dp"
                tools:ignore="MissingConstraints"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/phone"
                tools:layout_editor_absoluteY="16dp"
                tools:layout_editor_absoluteX="14dp"
                tools:ignore="MissingConstraints"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/organization"
                tools:layout_editor_absoluteY="16dp"
                tools:layout_editor_absoluteX="14dp"
                tools:ignore="MissingConstraints"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                tools:layout_editor_absoluteY="16dp"
                tools:layout_editor_absoluteX="14dp"
                tools:ignore="MissingConstraints"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"/>
            <Button android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/save"/>
            <Button android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>